--- a/react-meme-app/package.json
+++ b/react-meme-app/package.json
@@ -14,6 +14,7 @@
     "react-google-button": "^0.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinkit": "^3.0.0",
     "use-clipboard-copy": "^0.2.0",
     "web-vitals": "^1.1.1"
   },
