--- a/react-meme-app/package.json
+++ b/react-meme-app/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinkit": "^3.0.0",
+    "react-swipeable": "^7.0.2",
     "use-clipboard-copy": "^0.2.0",
     "web-vitals": "^1.1.1"
   },
