--- a/react-meme-app/package.json
+++ b/react-meme-app/package.json
@@ -10,9 +10,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.9.0",
     "firebase": "^8.4.3",
+    "html2canvas": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-button": "^0.7.2",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinkit": "^3.0.0",
